plugins {
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}


group = 'io.reflectoring.buckpal'
version = '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'java-library'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = 17
    targetCompatibility = 17
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation ('org.springframework.boot:spring-boot-starter-web')
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testImplementation 'com.tngtech.archunit:archunit:1.0.1'
    testImplementation 'com.h2database:h2'

    runtimeOnly 'com.h2database:h2'

}

test {
    useJUnitPlatform()
}

